fixed the overflow

--- a/Portfolio/src/components/Contact/Contact.module.css
+++ b/Portfolio/src/components/Contact/Contact.module.css
@@ -56,10 +56,11 @@
 @media screen and (max-width:830px) {
 
     .footerContainer {
+        display: flex;
         flex-direction: column;
         align-items: center;
         text-align: center;
-        padding: 20px;
+        padding-bottom: 50px;
         gap: 20px;
     }
 
